--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Roy R. Liu | Portfolio</title>
+    <style>
+        body, html { 
+            margin: 0; 
+            padding: 0; 
+            overflow: hidden; 
+            background: #3d4a35; 
+            cursor: none; /* Hide real cursor so the dog is the focus */
+        }
+        canvas { display: block; }
+        #ui-layer {
+            position: absolute;
+            top: 30px;
+            left: 30px;
+            color: white;
+            font-family: 'Courier New', Courier, monospace;
+            pointer-events: none; /* Allows clicks to pass through to the canvas */
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+            z-index: 10;
+        }
+        .instructions { font-size: 0.9em; opacity: 0.8; }
+    </style>
+</head>
+<body>
+
+<div id="ui-layer">
+    <h1>ROY R. LIU</h1>
+    <p class="instructions">Move to lead the dog • Click a shadow to dig</p>
+</div>
+
+<canvas id="gameCanvas"></canvas>
+
+<script>
 const canvas = document.getElementById('gameCanvas');
 const ctx = canvas.getContext('2d');
 
 // --- DIMENSIONS FROM YOUR DATA ---
-const DOG_W = 32; 
-const DOG_H = 40;
+const DOG_W = 32;  // 128 / 4
+const DOG_H = 40;  // 320 / 8
 const LEAF_SIZE = 16;
 
 let mouse = { x: window.innerWidth/2, y: window.innerHeight/2 };
-let dog = { x: 100, y: 100, vx: 0, vy: 0, frame: 0, lastDir: 'down' };
+let dog = { x: 100, y: 100, vx: 0, vy: 0, frame: 0 };
 let leaves = [];
 let particles = [];
 
@@ -22,10 +60,10 @@ const assets = {
 };
 
 const projectIcons = [
-    { id: 'car', x: 200, y: 300, revealed: false, label: 'Longhorn Racing' },
-    { id: 'gamma', x: 600, y: 200, revealed: false, label: 'Research' },
-    { id: 'racket', x: 300, y: 600, revealed: false, label: 'Tennis' },
-    { id: 'stock', x: 800, y: 400, revealed: false, label: 'Finance Modeling' }
+    { id: 'car', x: 250, y: 300, revealed: false, label: 'Longhorn Racing' },
+    { id: 'gamma', x: 650, y: 250, revealed: false, label: 'Research' },
+    { id: 'racket', x: 350, y: 600, revealed: false, label: 'Tennis' },
+    { id: 'stock', x: 850, y: 450, revealed: false, label: 'Finance Modeling' }
 ];
 
 function init() {
@@ -35,10 +73,15 @@ function init() {
     });
     window.dispatchEvent(new Event('resize'));
 
-    window.addEventListener('mousemove', e => { mouse.x = e.clientX; mouse.y = e.clientY; });
+    window.addEventListener('mousemove', e => { 
+        mouse.x = e.clientX; 
+        mouse.y = e.clientY; 
+    });
+
     window.addEventListener('mousedown', () => {
         projectIcons.forEach(icon => {
             let d = Math.hypot(mouse.x - icon.x, mouse.y - icon.y);
+            // If user clicks near a "buried" icon
             if (d < 80) {
                 icon.revealed = true;
                 burstLeaves(icon.x, icon.y);
@@ -46,107 +89,118 @@ function init() {
         });
     });
 
+    // Load all assets
     Object.keys(assets).forEach(key => {
         assets[key].img.onload = () => { assets[key].loaded = true; };
         assets[key].img.src = assets[key].src;
     });
 
+    // Create leaf floor
     for(let i=0; i<200; i++) {
         leaves.push({
             x: Math.random()*window.innerWidth, 
             y: Math.random()*window.innerHeight,
             rot: Math.random()*Math.PI*2,
             type: Math.random() > 0.5 ? 'fallLeaf' : 'springLeaf',
-            frame: Math.floor(Math.random()*5) // Picks 1 of the 5 shapes
+            frame: Math.floor(Math.random()*5) 
         });
     }
     requestAnimationFrame(gameLoop);
 }
 
 function burstLeaves(x, y) {
-    for(let i=0; i<20; i++) {
+    for(let i=0; i<25; i++) {
         particles.push({
             x: x, y: y,
-            vx: (Math.random()-0.5)*12,
-            vy: (Math.random()-0.5)*12 - 4,
+            vx: (Math.random()-0.5)*15,
+            vy: (Math.random()-0.5)*15 - 5,
             life: 1.0,
-            color: Math.random() > 0.5 ? '#e67e22' : '#27ae60'
+            color: Math.random() > 0.5 ? '#d35400' : '#27ae60'
         });
     }
 }
 
 function gameLoop() {
+    // Fill background
     ctx.fillStyle = '#3d4a35'; 
     ctx.fillRect(0, 0, canvas.width, canvas.height);
 
     // 1. Draw Buried Icons
     projectIcons.forEach(icon => {
         if (assets[icon.id].loaded) {
-            ctx.globalAlpha = icon.revealed ? 1.0 : 0.15;
+            ctx.globalAlpha = icon.revealed ? 1.0 : 0.12; // 0.12 opacity makes them look "buried"
             ctx.drawImage(assets[icon.id].img, icon.x - 40, icon.y - 40, 80, 80);
             if (icon.revealed) {
+                ctx.globalAlpha = 1.0;
                 ctx.fillStyle = "white";
-                ctx.font = "bold 14px Arial";
+                ctx.font = "bold 16px Arial";
                 ctx.textAlign = "center";
-                ctx.fillText(icon.label, icon.x, icon.y + 60);
+                ctx.fillText(icon.label, icon.x, icon.y + 65);
             }
         }
     });
     ctx.globalAlpha = 1.0;
 
-    // 2. Dog Physics & Animation Logic
+    // 2. Dog Physics
     let oldX = dog.x;
     let oldY = dog.y;
+    // The Lag: Dog follows 6% of the distance each frame
     dog.x += (mouse.x - dog.x) * 0.06;
     dog.y += (mouse.y - dog.y) * 0.06;
+    
     let vx = dog.x - oldX;
     let vy = dog.y - oldY;
     let speed = Math.hypot(vx, vy);
 
-    // Determine Sprite Row
-    let row = 0; // Default: Standing facing me
-    let col = Math.floor(Date.now() / 150) % 2; // Simple 2-frame anim
+    // 3. Animation State Logic
+    let row = 2; // Default: Sitting facing me (Row 3 in your list = index 2)
+    let col = Math.floor(Date.now() / 200) % 2; // 2-frame blink/idle
 
     if (speed > 0.5) {
+        // Determine walk direction
         if (Math.abs(vx) > Math.abs(vy)) {
-            row = vx > 0 ? 6 : 7; // Walking Right/Left rows
+            row = vx > 0 ? 6 : 7; // Rows 7 & 8 (indices 6 & 7)
         } else {
-            row = vy > 0 ? 4 : 5; // Walking Toward/Away rows
+            row = vy > 0 ? 4 : 5; // Rows 5 & 6 (indices 4 & 5)
         }
         col = Math.floor(Date.now() / 100) % 4; // 4-frame walk cycle
-    } else {
-        row = 2; // Sitting facing me
     }
 
-    // 3. Draw Leaves (Trudging)
+    // 4. Draw Leaves (with "Trudging" effect)
     leaves.forEach(l => {
         let dist = Math.hypot(l.x - dog.x, l.y - dog.y);
-        if (dist < 40) {
-            l.x += vx * 1.2;
-            l.y += vy * 1.2;
-            l.rot += 0.1;
+        if (dist < 45) {
+            l.x += vx * 1.5; // Push leaves in direction dog is moving
+            l.y += vy * 1.5;
+            l.rot += 0.15;
         }
         if (assets[l.type].loaded) {
             ctx.save();
             ctx.translate(l.x, l.y);
             ctx.rotate(l.rot);
-            // Draw one of the 5 leaves from the 80x16 sheet
-            ctx.drawImage(assets[l.type].img, l.frame * 16, 0, 16, 16, -8, -8, 16, 16);
+            // Draw one of the 5 leaf shapes from the 80x16 sheet
+            ctx.drawImage(assets[l.type].img, l.frame * 16, 0, 16, 16, -8, -8, 20, 20);
             ctx.restore();
         }
     });
 
-    // 4. Draw Dog
+    // 5. Draw Dog
     if (assets.dog.loaded) {
-        ctx.drawImage(assets.dog.img, col * DOG_W, row * DOG_H, DOG_W, DOG_H, dog.x-DOG_W, dog.y-DOG_H, DOG_W*2, DOG_H*2);
+        ctx.drawImage(
+            assets.dog.img, 
+            col * DOG_W, row * DOG_H, DOG_W, DOG_H, // Source
+            dog.x - 32, dog.y - 40, 64, 80          // Destination (Scaled 2x)
+        );
     }
 
-    // 5. Draw Dig Particles
+    // 6. Draw Digging Particles
     particles.forEach((p, i) => {
-        p.x += p.vx; p.y += p.vy; p.vy += 0.3; p.life -= 0.02;
+        p.x += p.vx; p.y += p.vy; p.vy += 0.4; p.life -= 0.02;
         ctx.fillStyle = p.color;
         ctx.globalAlpha = p.life;
-        ctx.fillRect(p.x, p.y, 6, 6);
+        ctx.beginPath();
+        ctx.arc(p.x, p.y, 4, 0, Math.PI * 2);
+        ctx.fill();
         if (p.life <= 0) particles.splice(i, 1);
     });
     ctx.globalAlpha = 1.0;
@@ -155,3 +209,6 @@ function gameLoop() {
 }
 
 init();
+</script>
+</body>
+</html>
